--- a/gallery_studio.html
+++ b/gallery_studio.html
@@ -184,6 +184,32 @@
             <p class="lead text-muted">Whether it is to look your best for your headshots & corporate profiles,<br> to a personalized graduation & family photoshoots,<br>to maternity photography to celebrate new life. </p>
         </div>
 
+        <!-- The Modal -->
+        <div id="myModal" class="modal">
+            <span class="close">&times;</span>
+            <img class="modal-content" id="img01">
+            <div id="caption"></div>
+        </div>
+
+
+        <!-- Footer Buttons-->
+        <div class="container-fluid div-break">
+            <div class="btn-center">
+                <a href="services.html#Architecture"><button type="button" class="font1 btn btn-override">SERVICES</button></a>
+            </div>
+            <div class="lead2 font-center font1">
+                <p>Visit our services page to find out more about our Architecture Package!</p>
+            </div>
+
+        </div>
+        <!--Empty div-->
+        <div style="padding:10px"></div>
+
+        <!--Button-->
+        <div class="btn-center">
+            <a href="#top"><button type="button" class="font1 btn btn-override">Back to top</button></a>
+        </div>
+
         <!-- Footer -->
         <div class="footer">
             <div class="container-footer">
