--- a/gallery_outdoors.html
+++ b/gallery_outdoors.html
@@ -1,38 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio - Outdoor Location Photography</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>DLJ & Co Gallery - Outdoors</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/stylesheet.css">
 
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Playfair+Display&family=Quattrocento+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Playfair+Display&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/81d30d81d6.js" crossorigin="anonymous"></script>
+
 
 </head>
 
 <body>
-
-
     <!-- Logo -->
     <div class="container">
         <div class="top">
-            <div class="company-logo coy-logo"></div>
+            <div class="company-logo">
+                <img src="/assets/images/logo.png" alt="Company logo">
+            </div>
         </div>
 
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg navbar-dark rounded font1">
+        <nav class="navbar navbar-expand-lg navbar-dark rounded">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample10" aria-controls="navbarsExample10" aria-expanded="false" aria-label="Toggle navigation">
-        <i class="fas fa-bars fa-lg"><span class="navbar-toggler-icon"></span></i>
-    </button>
+                <i class="fas fa-bars fa-lg"><span class="navbar-toggler-icon"></span></i>
+        </button>
 
             <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample10">
-                <ul class="navbar-nav ">
+                <ul class="navbar-nav">
                     <li class="nav-item active">
                         <a class="" href="home.html">HOME </a>
                     </li>
@@ -44,8 +48,8 @@
                     </li>
                     <li>
                         <a class="nav-item btn dropdown-toggle " data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-                    PORTFOLIO
-                </a>
+                            PORTFOLIO
+                    </a>
                     </li>
                     <li><a class="nav-item" href="login.html">LOGIN</a></button>
                         <!--Suggest use bootstrap modal for this func, but may also be done with onClick event go back page-->
@@ -57,10 +61,10 @@
                 </ul>
             </div>
         </nav>
-        <!--Navbar Dropdown-->
-        <div class="collapse " id="collapseExample">
-            <div class="container dropdownbtn dropdownbtn-txt ">
-                <div class="row justify-content-md-center">
+
+        <div class="collapse" id="collapseExample">
+            <div class="container dropdownbtn dropdownbtn-txt">
+                <div class="row">
                     <div class="col-sm-auto">
                         <a class="dropdownbtn-txt" href="gallery_architecture.html">Architecture</a>
                     </div>
@@ -82,108 +86,137 @@
                 </div>
             </div>
         </div>
-    </div>
 
-    <!--Text Intro-->
 
-    <div class="portfolio-description">
-        <h1>Outdoor Location Photography</h1>
-        <div class="container">
-            <p class="lead text-muted">Whether it's an advertising campaign, as an inspiration for people to travel, or to reflect the unique personality of a subject, the right location photographer is essential in getting the best for your shoot.
-            </p>
+        <!--    Block Gallery-->
+
+        <div class="container-products divpad">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="colOffset1"></div>
+                    <div class="card">
+                        <img id="myImg1" class="card-img-top" src="assets/images/outdoor/OutdoorMBS.jpg" alt="Outdoor Photography - MBS" style="object-position: 32%">
+                        <!--        <div class="card-block">-->
+                        <!--            <h4 class="card-title">Card title</h4>-->
+                        <!--            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>-->
+                        <!--        </div>-->
+                        <!--        <div class="card-footer">-->
+                        <!--            <small class="text-muted">Last updated 3 mins ago</small>-->
+                        <!--        </div>-->
+                    </div>
+
+                    <div class="offset"></div>
+
+                    <div class="card">
+                        <img id="myImg2" class="card-img-top" src="assets/images/outdoor/OutdoorSentosa.jpg" alt="Outdoor Photography - Sentosa">
+                    </div>
+
+                </div>
+
+                <div class="col-md-4">
+                    <div class="colOffset2"></div>
+                    <div class="card">
+                        <img id="myImg3" class="card-img-top" src="assets/images/outdoor/OutdoorCBD.jpg" alt="Outdoor Photography - CBD">
+                        <!--        <div class="card-block">-->
+                        <!--            <h4 class="card-title">Card title</h4>-->
+                        <!--            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>-->
+                        <!--        </div>-->
+                        <!--        <div class="card-footer">-->
+                        <!--            <small class="text-muted">Last updated 3 mins ago</small>-->
+                        <!--        </div>-->
+                    </div>
+                    <!--        &lt;!&ndash; The Modal &ndash;&gt;-->
+                    <!--        <div id="myModal" class="modal">-->
+                    <!--            <span class="close">&times;</span>-->
+                    <!--            <img class="modal-content" id="img01">-->
+                    <!--            <div id="caption"></div>-->
+                    <!--        </div>-->
+
+                    <div class="offset"></div>
+                    <div class="card">
+                        <img id="myImg4" class="card-img-top" src="assets/images/outdoor/OutdoorEsplanade.jpg" alt="Outdoor Photography - Esplanade" style="object-position:60%">
+                    </div>
+
+                </div>
+                <div class="col-md-4">
+                    <div class="colOffset3"></div>
+                    <div class="card">
+                        <img id="myImg5" class="card-img-top" src="assets/images/outdoor/OutdoorMerlion.jpg" alt="Outdoor Photography - Merlion" style="object-position:80%">
+                        <!--        <div class="card-block">-->
+                        <!--            <h4 class="card-title">Card title</h4>-->
+                        <!--            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>-->
+                        <!--        </div>-->
+                        <!--        <div class="card-footer">-->
+                        <!--            <small class="text-muted">Last updated 3 mins ago</small>-->
+                        <!--        </div>-->
+                    </div>
+                    <div class="offset"></div>
+                    <div class="card">
+                        <img id="myImg6" class="card-img-top" src="assets/images/outdoor/OutdoorSGParkMBS.jpg" alt="Outdoor Photography - Park">
+                    </div>
+                </div>
+            </div>
+
+            <!-- The Modal -->
+            <div id="myModal" class="modal">
+                <span class="close">&times;</span>
+                <img class="modal-content" id="img01">
+                <div id="caption"></div>
+            </div>
+
         </div>
-    </div>
 
-    <!--Gallery-->
-    <div class="block gal_pad">
-        <!--<div class="block" width="1000px">-->
+        <!-- Empty container -->
+        <div class="container services">
+            <div class="row">
 
-        <div class="container-fluid div-break">MBS<img id="myImg1" class="minipic" src="assets/images/outdoor/flash.jpg" alt="Adventure Photography"></div>
-        <div class="block">
-            <img src="assets/images/outdoor/flash_port.jpg" data-speed="-0.75" class="img-parallax" alt="Adventure Photography">
+            </div>
         </div>
-    </div>
 
-    <!--    <img src="assets/images/outdoor/flash_port.jpg" data-speed="-0.75" class="img-parallax" alt="Adventure Photography" style="width: 500px; border: 22px solid grey; right: 20%;"">-->
-    <!--    </div>-->
-    <div class="block gal_pad">
-        <div class="container-fluid div-break">CBD<img id="myImg2" class="minipic" src="assets/images/outdoor/OutdoorCBD2.jpg" alt="Industrial Photography"></div>
-        <div class="block">
-            <img src="assets/images/outdoor/OutdoorCBD2_port.jpg" data-speed="-0.75" class="img-parallax" alt="Industrial Photography">
+        <!-- Other product cards preamble-->
 
+        <div class="portfolio-description">
+            <h1>Outdoor</h1>
+            <p class="lead text-muted">Photos are suitable for a wide range of occasions. We specialize in portraits and our outdoor photography service is suitable fora wide range of usage such as family shoots, couple, professional business photos as well as e-commerce stores.</p>
         </div>
-    </div>
 
-    <div class="block gal_pad">
-        <div class="container-fluid div-break">MBS<img id="myImg3" class="minipic" src="assets/images/outdoor/OutdoorMBSshoppers.jpg" alt="Creative Photography"></div>
-        <div class="block">
-            <img src="assets/images/outdoor/OutdoorMBSshoppers_port.jpg" data-speed="-0.75" class="img-parallax" alt="Creative Photography">
-
+        <!-- The Modal -->
+        <div id="myModal" class="modal">
+            <span class="close">&times;</span>
+            <img class="modal-content" id="img01">
+            <div id="caption"></div>
         </div>
-    </div>
-    <div class="block gal_pad">
-        <div class="container-fluid div-break">NGS<img id="myImg4" class="minipic" src="assets/images/outdoor/outdoorNGS2.jpg" alt="Landscape Photography"></div>
-        <div class="block">
-            <img src="assets/images/outdoor/outdoorNGS2_port.jpg" data-speed="-0.75" class="img-parallax" alt="Landscape Photography">
+
+
+        <!-- Footer Buttons-->
+        <div class="container-fluid div-break">
+            <div class="btn-center">
+                <a href="services.html#Architecture"><button type="button" class="font1 btn btn-override">SERVICES</button></a>
+            </div>
+            <div class="lead2 font-center font1">
+                <p>Visit our services page to find out more about our Architecture Package!</p>
+            </div>
 
         </div>
-    </div>
-    <div class="block gal_pad">
+        <!--Empty div-->
+        <div style="padding:10px"></div>
 
-        <div class="container-fluid div-break">Pasir Panjang<img id="myImg5" class="minipic" src="assets/images/outdoor/OutdoorPasirPanjang.jpg" alt="Industrial Photography"></div>
-        <div class="block">
-            <img src="assets/images/outdoor/OutdoorPasirPanjang_port.jpg" data-speed="-0.75" class="img-parallax" alt="Industrial Photography">
-
-        </div>
-    </div>
-    <div class="block gal_pad">
-        <div class="container-fluid div-break">McRitchie Reservoir<img id="myImg6" class="minipic" src="assets/images/outdoor/OutdoorReservoir.jpg" alt="Cityscape Photography"></div>
-        <div class="block">
-            <img src="assets/images/outdoor/OutdoorReservoir_port.jpg" data-speed="-0.75" class="img-parallax" alt="Cityscape Photography">
-
-        </div>
-    </div>
-
-    <!-- The Modal -->
-    <div id="myModal" class="modal">
-        <span class="close">&times;</span>
-        <img class="modal-content" id="img01">
-        <div id="caption"></div>
-    </div>
-    </div>
-
-
-    <!-- Footer Buttons-->
-    <div class="container-fluid div-break">
+        <!--Button-->
         <div class="btn-center">
-            <a href="services.html#Outdoor"><button type="button" class="font1 btn btn-override" style="color:white">SERVICES</button></a>
-        </div>
-        <div class="lead2 font-center font1">
-            <p>Visit our services page to find out more about our Location Photography Package!</p>
+            <a href="#top"><button type="button" class="font1 btn btn-override">Back to top</button></a>
         </div>
 
-    </div>
-    <!--Empty div-->
-    <div style="padding:10px"></div>
-
-    <!--Button-->
-    <div class="btn-center">
-        <a href="#top"><button type="button" class="font1 btn btn-override">Back to top</button></a>
-    </div>
-
-
-    <!-- Footer -->
-    <div class="container">
+        <!-- Footer -->
         <div class="footer">
             <div class="container-footer">
-                <div class="row company-logo coy-logo">
-                    <a href="mailto:dlj@gmail.com">
+                <div class="row">
+                    <a href="mailto:dlj@gmail.com"><img class="logo" src="/assets/images/logo.png">
                     </a>
                     <hr>
                 </div>
                 <div class="row">
                     <div class="col-md-6 left">
-                        <p class="address">(+65)333400 <br> <a href="mailto:dlj@gmail.com">Send us an email here</a><br> 20 Cecil Street #16-04 EQUITY PLAZA<br>Singapore 049705<br>
+                        <p class="address">(+65)333400 <br> <a class="contact-us" href="mailto:dlj@gmail.com">Contact us here</a><br> 20 Cecil Street #16-04 EQUITY PLAZA<br>Singapore 049705<br>
                         </p>
                     </div>
                     <div class="col-md-6 right">
@@ -200,20 +233,13 @@
             </div>
         </div>
     </div>
-
-    <!-- Bootstrap core JavaScript
-================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <!--    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <script src="assets/js/main_js.js"></script>
     <script src="assets/js/waterfall.js"></script>
     <!--	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js" crossorigin="anonymous"></script>
 
 </body>
 
