--- a/gallery_product.html
+++ b/gallery_product.html
@@ -179,7 +179,31 @@
             <p class="lead text-muted">Every product has a story to tell about its quality, functionality and utility. We photograph every piece like it’s our own proud creation. Our images help you convey the story and demand attention.</p>
         </div>
 
+        <!-- The Modal -->
+        <div id="myModal" class="modal">
+            <span class="close">&times;</span>
+            <img class="modal-content" id="img01">
+            <div id="caption"></div>
+        </div>
 
+
+        <!-- Footer Buttons-->
+        <div class="container-fluid div-break">
+            <div class="btn-center">
+                <a href="services.html#Architecture"><button type="button" class="font1 btn btn-override">SERVICES</button></a>
+            </div>
+            <div class="lead2 font-center font1">
+                <p>Visit our services page to find out more about our Architecture Package!</p>
+            </div>
+
+        </div>
+        <!--Empty div-->
+        <div style="padding:10px"></div>
+
+        <!--Button-->
+        <div class="btn-center">
+            <a href="#top"><button type="button" class="font1 btn btn-override">Back to top</button></a>
+        </div>
 
         <!-- Footer -->
         <div class="footer">
