--- a/gallery_wedding.html
+++ b/gallery_wedding.html
@@ -182,6 +182,32 @@
             <p class="lead text-muted">Lift the memories of your wedding day with pictures taken in exotic locales <br>or at a location of your choice. Let us capture that joyous memory for you <br>while you relish in your special day.</p>
         </div>
 
+        <!-- The Modal -->
+        <div id="myModal" class="modal">
+            <span class="close">&times;</span>
+            <img class="modal-content" id="img01">
+            <div id="caption"></div>
+        </div>
+
+
+        <!-- Footer Buttons-->
+        <div class="container-fluid div-break">
+            <div class="btn-center">
+                <a href="services.html#Architecture"><button type="button" class="font1 btn btn-override">SERVICES</button></a>
+            </div>
+            <div class="lead2 font-center font1">
+                <p>Visit our services page to find out more about our Architecture Package!</p>
+            </div>
+
+        </div>
+        <!--Empty div-->
+        <div style="padding:10px"></div>
+
+        <!--Button-->
+        <div class="btn-center">
+            <a href="#top"><button type="button" class="font1 btn btn-override">Back to top</button></a>
+        </div>
+
         <!-- Footer -->
         <div class="footer">
             <div class="container-footer">
